Focus Skeleton + Localization Fixes
Factories are still broken lmao I got to fix that

--- a/localisation/english/DEN_USA/XOR_l_english.yml
+++ b/localisation/english/DEN_USA/XOR_l_english.yml
@@ -34,6 +34,25 @@
  XOR_infrastructure_project_desc:0 ""
  XOR_build_up_OID_base:0 "Expand the O.I.D Home Base"
  XOR_build_up_OID_base_desc:0 ""
+ XOR_tt_has_controlled_east:0 "The O.I.D. completely controls the §YOregon East§!. "
+ XOR_shift_more_funding_to_OID:0 "Shift More Funding to the O.I.D."
+ XOR_shift_more_funding_to_OID_desc:0 ""
+ XOR_establish_new_govt:0 "Establish a New Oregon Government"
+ XOR_establish_new_govt_desc:0 ""
+ XOR_exert_federal_control:0 "Exert Federal Control"
+ XOR_exert_federal_control_desc:0 ""
+ XOR_move_capital:0 "Move the Capital"
+ XOR_move_capital_desc:0 ""
+ XOR_ensure_legitimacy:0 "Ensure Legitimacy"
+ XOR_ensure_legitimacy_desc:0 ""
+ XOR_reach_out_cali:0 "Reach out to California"
+ XOR_reach_out_cali_desc:0 ""
+ XOR_reach_out_wash:0 "Reach out to Washington"
+ XOR_reach_out_wash_desc:0 ""
+ XOR_reach_out_nev:0 "Reach out to Nevada"
+ XOR_reach_out_nev_desc:0 ""
+ XOR_look_east:0 "Look East"
+ XOR_look_east_desc:0 ""
 
  #Ideas, Traits, bookmarks
  XOR_missing_leadership:0 "Missing Leadership"
