me when state 960

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -63,3 +63,4 @@
  XWY_COM_1:0 "The United Communes of America"
  XWY_COM_2:0 "Unified Peoples Republics"
  XWY_COM_3:0 "The Peoples Republic of America"
+ XWY_kingdom_1:0 "The Kingdom of Wyoming"
