--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -9,6 +9,7 @@
  VICTORY_POINTS_10582:0 "Logan"
  VICTORY_POINTS_12699:0 "St. George"
  VICTORY_POINTS_1756:0 "Moab"
+ VICTORY_POINTS_10642:0 "Los Alamos"
  
  four_year_plan_tooltip:0 "§YThis focus will enable the 4 Year Plan.§!"
  purge_mormons_tooltip:0 "§RThis decision will have unintended consequences...§!"
