New Nevada Ideas

--- a/localisation/english/DEN_USA/XNV_l_english.yml
+++ b/localisation/english/DEN_USA/XNV_l_english.yml
@@ -15,3 +15,8 @@
 
  XNVAFOC:0 "§YAll for Our Country§"
  XNVElection:0 "Begin Election"
+
+ XNV_AFOCIdea:0 "§YAll for Our Country§"
+ XNV_AFOCIdea_desc:0 ""
+ XNV_GreatDepression:0 "Great Depression"
+ XNV_GreatDepression_desc:0 "§RThe failure of several major institutions has left the Nevada economy in shambles. The main industry of our economy, mineral extraction, has plummeted in value leading many to question how silver the Silver State really is."
