Utah Scientology Branch + Texas Hotfix
rip one-focus leader portrait generic tree

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -1,7 +1,21 @@
 ﻿l_english:
+ XUT_fascism:0 "Holy Kingdom of Scientology"
+ XUT_fascism_DEF:0 "the Holy Kingdom of Scientology"
+ XUT_democratic:0 "Utah"
+ XUT_democratic_DEF:0 "Utah"
+ XUT_neutrality:0 "Deseret"
+ XUT_neutrality_DEF:0 "Deseret"
+ XUT_communism:0 "People's Republic of Utah"
+ XUT_communism_DEF:0 "the People's Republic of Utah"
+ XUT_fascism_ADJ:0 "Scientologist"
+ XUT_democratic_ADJ:0 "Utahn"
+ XUT_neutrality_ADJ:0 "Deseret"
+ XUT_communism_ADJ:0 "Utahn"
  XUT: "Utah"
  XUT_DEF: "Utah"
  XUT_ADJ: "Utah"
+ XUT_subject:0 "$OVERLORDADJ$ $XUT$"
+ XUT_subject_DEF:0 "$OVERLORDADJ$ $XUT$"
  
  STATE_939:0 "Moab"
  STATE_940:0 "Lower Utah"
