Reform USA Decision + Minor Utah Focus Changes
finally lol

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2,3 +2,6 @@
  LIB: "HERE BE DRAGONS"
  LIB_DEF: "HERE BE DRAGONS"
  LIB_ADJ: "HERE BE DRAGONS"
+ DEN_USA: "United States of America"
+ DEN_USA_DEF: "the United States of America"
+ DEN_USA_ADJ: "American"
