--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -73,4 +73,11 @@
  XAL_serve_or_perish:0 "Serve or Perish"
  XAL_no_gun_is_wrong_gun:0 "No Gun Is Wrong Gun"
  XAL_feed_the_war_machine:0 "Feed The War Machine"
- 
+ XAL_al_abama_war_machine_decisions:0 "Feed The War Machine"
+ XAL_al_abama_war_machine_decisions_desc:0 "Aserejé-ja-dejé, De jebe tu de jebere"
+ XAL_unlock_war_machine_decisions_tt:0 "§GUnlocks Decisions To Expand Our Military Industry§!"
+ XAL_penal_decision_tt:0 "§GSpawns In Two Penal Units§!"
+ XAL_construct_weapons_sheds:0 "Open Gun Sheds"
+ XAL_force_our_men_to_fight:0 "Conscript Our People"
+ XAL_trade_with_the_black_market:0 "Black Market Deals"
+ XAL_penal_divisions:0 "Raise Penal Divisions"
