--- a/localisation/english/DEN_USA/XNJ_l_english.yml
+++ b/localisation/english/DEN_USA/XNJ_l_english.yml
@@ -2,4 +2,10 @@
  XNJ: "New Jersey"
  XNJ_DEF: "New Jersey"
  XNJ_ADJ: "New Jersey"
+ VICTORY_POINTS_11782:0 "Trenton"
+ VICTORY_POINTS_11900:0 "Salem"
+ XNJ_description:0 "After the collapse of the union, governor Harold Hoffman has managed to stay in power as the fledgling nation's first president. With popular support for the government nearly at rock bottom, and shady groups popping up wherever they please, the future of the republic is uncertain."
+ XNJ_hate_hoffman:0 "We Hate Hoffman!"
+ XNJ_gravel_state:0 "Capital of America(n Gravel Services)"
+ XNJ_raritan_putsch:0 "Raritan Hall Putsch"
  
